--- a/app/src/main/res/layout/activity_gyroscope.xml
+++ b/app/src/main/res/layout/activity_gyroscope.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_gravity="center"
-    tools:context=".AcelerometerActivity">
+    tools:context=".AccelerometerActivity">
 
     <TextView
         android:id="@+id/sensorData"
